# thesis

./: .gitignore  carpet-0.1-cp310-cp310-linux_x86_64.whl  carpet-3.1.2-cp310-cp310-linux_x86_64.whl  carpet3.lcs  hist_grid.py  pyproject.toml  requirements.txt  tracking_env.py
common/: carpet_simulation.py  tracking_env.py
deployments/: test_ga.yml
deployments/multi_agent_baseline/: test.yml  train.yml
deployments/multi_agent_critic/: test.yml  train.yml
deployments/multi_agent_critic_fc/: test.yml  train.yml
deployments/multi_agent_critic_gnn/: test.yml  train.yml
deployments/multi_agent_critic_gnn_fc_graph/: test.yml  train.yml
deployments/multi_agent_critic_gnn_threshold/: test.yml  train.yml
deployments/multi_agent_critic_gnn_treshold/: test.yml  train.yml
deployments/single_agent_baseline/: generate.yml  test.yml  test_best.yml  train.yml
genetic_algorithm/: carpet_simulation.py  test.py  tracking_env.py  train.py  utils.py
misc/: requirements.txt
multi_agent_baseline/: carpet_simulation.py  test.py  tracking_env.py  train.py  train_local.py  utils.py
multi_agent_baseline/results/: pds.txt  ratios.txt  track.txt
multi_agent_critic/: model.py  test.py  train.py
multi_agent_critic_fc/: carpet_simulation.py  centralized_critic.py  model.py  test.py  tracking_env.py  train.py  train_local.py  utils.py
multi_agent_critic_fc/results/: pds.txt  ratios.txt  track.txt
multi_agent_critic_gnn/: carpet_simulation.py  model.py  model_original.py  test.py  tracking_env.py  train.py  utils.py
multi_agent_critic_gnn/results/: pds.txt  ratios.txt  track.txt
multi_agent_critic_gnn_fc_graph/: model.py  test.py  tracking_env.py  train.py  train_local.py  utils.py
multi_agent_critic_gnn_fc_graph/results/: pds.txt  ratios.txt  track.txt
multi_agent_critic_gnn_threshold/: model.py  test.py  tracking_env.py  train.py  train_local.py  utils.py
multi_agent_critic_gnn_threshold/results/: pds.txt  ratios.txt  track.txt
prototype/: env.py  policy.py  simulation.py  tracking_env.py  train.py  train_tracking_prototype.py  utils.py
prototype/baseline/: config.py  simulation.py  test.py  tracking_env.py  train_baseline.py  train_tracking_prototype.py  utils.py
single_agent_baseline/: alts.txt  carpet_plots.py  carpet_simulation.py  config.py  generate_waveforms.py  pds.txt  ranges.txt  ratios.txt  test.py  test_best.py  tracking_env.py  train.py  train_local.py  utils.py  velocities.txt  waveforms.txt.npy
src/: carpet_simulation.py  tracking_env.py
(+58 files in other folders)
