[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["CachoobiDoobi <radu.gaghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = "^0.29.1"
ray = {version = "2.9.1", extras = ["tune"]}
matplotlib = "3.8.3"
scikit-learn = "^1.4.1.post1"
numpy = "1.26.3"
torch = "2.2.0"
stonesoup = "1.1"
dm-tree = "^0.1.8"
scipy = "^1.12.0"
plotly = "^5.19.0"
pandas = "^2.2.1"
scikit-image = "^0.22.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
