[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["CachoobiDoobi <radu.gaghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = "^0.29.1"
ray = {version = "2.9.1", extras = ["tune"]}
matplotlib = "3.8.3"
scikit-learn = "^1.4.1.post1"
numpy = "1.26.3"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp39-cp39-linux_x86_64.whl"}#"2.2.0"
stonesoup = "1.1"
dm-tree = "^0.1.8"
scipy = "^1.12.0"
plotly = "^5.19.0"
pandas = "^2.2.1"
scikit-image = "^0.22.0"
opencv-python = "^4.9.0.80"
#nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
#nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
#nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
#nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
#nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
#nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
#nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
#nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
#nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
#nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
#nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
